--- a/games/ticTacToe/ticTacToe.html
+++ b/games/ticTacToe/ticTacToe.html
@@ -14,7 +14,7 @@
 
     <!--NAV BAR-->
     <nav>
-        <h2 id="nav-head">MINIGAME MADNESS &#127918;</h2>
+        <h2 id="nav-head"><a href="../../index.html">MINIGAME MADNESS &#127918;</a></h2>
         <ul>
             <li class="nav-a"><a href="../games.html">Games</a></li>
             <li class="nav-a"><a href="../../index.html">Home</a></li>
