--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body class="home-body">
   <nav>
-    <h2 id="nav-head">MINIGAME MADNESS &#127918;</h2>
+    <h2 id="nav-head"><a href="./index.html">MINIGAME MADNESS &#127918;</a></h2>
     <ul>
       <li class="nav-a"><a href="/games/games.html">Games</a></li>
       <li class="nav-a"><a href="index.html">Home</a></li>
