--- a/games/buttonMasher/buttomMash.html
+++ b/games/buttonMasher/buttomMash.html
@@ -27,7 +27,7 @@
 
     <div class="mash-game-text">
         <h1>BUTTON MASHER</h1>
-        <p>click start and get ready to mash the 'A' key!</p>
+        <p>click start and get ready to mash the screen as fast as you can!</p>
         <button class="mash-start">START</button>
     </div>
 
